Fixed disabling player control when no visible.

--- a/styles/app.css
+++ b/styles/app.css
@@ -144,6 +144,7 @@ html, body {
 
 .player__control--hidden {
   opacity: 0;
+  cursor: auto;  
 }
 
 @media only screen and (min-width: 64.063em) {
